fix: tweak the input background and border to enhance the readability of notebooks
Fixes #5982

--- a/plugins/plugin-client-common/web/scss/components/Terminal/_mixins.scss
+++ b/plugins/plugin-client-common/web/scss/components/Terminal/_mixins.scss
@@ -14,7 +14,7 @@
  * limitations under the License.
  */
 
-$input-bg-light: var(--color-base00);
+$input-bg-light: rgba(27, 31, 35, 0.05);
 $input-bg-dark: var(--color-base02);
 $input-bg-minisplit: var(--color-base01);
 $input-border: rgba(100, 100, 100, 0.05);
